--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <textarea id="css" placeholder="CSS"></textarea>
     <textarea id="js" placeholder="JavaScript"></textarea>
     <iframe id="code"></iframe>
-    <script src="/editcode/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
